[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trpc-core"
version = "0.1.0"
description = "A toolkit for implementing tRPC servers in python"
authors = [{ name = "Rafał Pitoń", email = "rafio.xudb@gmail.com" }]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "ruff"]

[tool.hatch.build]
include = [
  "trpc/**/*.py",
  "trpc/py.typed",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]
exclude = [
  "tests",
]